# cffmpeg_win_android

./: README.md  test.c
android/: build_android.sh  ffmpeg.md
android/SongliHLCPlayer/app/: CMakeLists.txt  build.gradle
android/SongliHLCPlayer/app/src/androidTest/java/activity/songli/com/songlihlcplayer/: ExampleInstrumentedTest.java
android/SongliHLCPlayer/app/src/main/: AndroidManifest.xml
android/SongliHLCPlayer/app/src/main/cpp/: FFmpegAudio.cpp  FFmpegAudio.h  FFmpegVedio.cpp  FFmpegVedio.h  LOG.h  SongliHLCPlayer.cpp  activity_songli_com_songlihlcplayer_SongliPlayer.h
android/SongliHLCPlayer/app/src/main/java/activity/songli/com/songlihlcplayer/: MainActivity.java  SongliPlayer.java
android/SongliHLCPlayer/app/src/main/res/layout/: activity_main.xml
android/SongliHLCPlayer/app/src/main/res/values/: strings.xml
android/SongliHLCPlayer/app/src/test/java/activity/songli/com/songlihlcplayer/: ExampleUnitTest.java
android/SongliHLCPlayer/gradle/wrapper/: gradle-wrapper.properties
android/android_OpenSLSE/app/: CMakeLists.txt  build.gradle
android/android_OpenSLSE/app/libs/include/libswscale/: swscale.h
android/android_OpenSLSE/app/src/main/: AndroidManifest.xml
android/android_OpenSLSE/gradle/wrapper/: gradle-wrapper.properties
android/ffmpeg_yuv/app/: CMakeLists.txt  build.gradle
android/ffmpeg_yuv/app/src/main/: AndroidManifest.xml
android/ffmpeg_yuv/gradle/wrapper/: gradle-wrapper.properties
win/MFC_ffmpeg_sdl_player/: MFC_ffmpeg_sdl_player.sln
win/MFC_ffmpeg_sdl_player/Debug/: MFC_ffmpeg_sdl_player.ilk
win/MFC_ffmpeg_sdl_player/MFC_ffmpeg_sdl_player/: MFC_ffmpeg_sdl_player.aps  MFC_ffmpeg_sdl_player.cpp  MFC_ffmpeg_sdl_player.h  MFC_ffmpeg_sdl_player.rc  MFC_ffmpeg_sdl_player.vcxproj  MFC_ffmpeg_sdl_player.vcxproj.filters  MFC_ffmpeg_sdl_playerDlg.cpp  MFC_ffmpeg_sdl_playerDlg.h  ReadMe.txt  resource.h  stdafx.cpp
win/MFC_ffmpeg_sdl_player/MFC_ffmpeg_sdl_player/res/: MFC_ffmpeg_sdl_player.rc2
win/songli_ffmpeg_SDL/: songli_ffmpeg_SDL.sln
win/songli_ffmpeg_SDL/Debug/: songli_ffmpeg_SDL.exp  songli_ffmpeg_SDL.ilk  songli_ffmpeg_SDL.lib
win/songli_ffmpeg_SDL/songli_ffmpeg_SDL/: NALU_x264.cpp  NALU_x264.h  player.cpp  sdl.cpp  sdl_ffmpeg_test_1.cpp  songli.txt  songli_ffmpeg_SDL.vcxproj  songli_ffmpeg_SDL.vcxproj.filters  songli_ffmpeg_sdl_player.cpp  x264_faac.cpp
win/songli_ffmpeg_SDL/songli_ffmpeg_SDL/Debug/: sdl_ffmpeg_test_1.obj.enc  vc141.idb
win/songli_ffmpeg_SDL/songli_ffmpeg_SDL/Debug/songli_f.3075DF50.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  songli_ffmpeg_SDL.lastbuildstate  songli_ffmpeg_SDL.write.1u.tlog
win/songli_ffmpeg_SDL/songli_ffmpeg_SDL/player/: Audio.cpp  Audio.h  FrameQueue.cpp  FrameQueue.h  Media.cpp  PacketQueue.cpp  PacketQueue.h  Video.cpp  Video.h  VideoDisplay.cpp  VideoDisplay.h  main.cpp
win/win_ffmpeg_yuv_pcm/: 9_20_ffmpeg.sln
win/win_ffmpeg_yuv_pcm/9_20_ffmpeg/: 9_20_ffmpeg.vcxproj  9_20_ffmpeg.vcxproj.filters  ffmpeg.h  ffmpeg_text.cpp  ffmpeg_text2.cpp  ffmpeg_yuv_pcm.cpp
win/win_ffmpeg_yuv_pcm/9_20_ffmpeg/1.yuv/: 1.yuv.cpp
win/win_ffmpeg_yuv_pcm/9_20_ffmpeg/Debug/: vc141.idb
win/win_ffmpeg_yuv_pcm/9_20_ffmpeg/Debug/9_20_ffmpeg.tlog/: 9_20_ffmpeg.lastbuildstate  9_20_ffmpeg.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.38384.delete.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
win/win_ffmpeg_yuv_pcm/9_20_ffmpeg/PCM/: pcm_mp3_player.cpp  songli_ffmpeg_pcm.cpp
win/win_ffmpeg_yuv_pcm/9_20_ffmpeg/SDL/: songli_SDL_base.cpp  songli_SDL_base_player.cpp  test.c
win/win_ffmpeg_yuv_pcm/9_20_ffmpeg/ffmpeg/: file_audio.cpp  simplest_ffmpeg_player.c  songli_ffmpeg_decoder.cpp
win/win_ffmpeg_yuv_pcm/9_20_ffmpeg/lib/: swscale-3.lib
win/win_ffmpeg_yuv_pcm/9_20_ffmpeg/vedio_audio/: CCycleBuffer.cpp  CycleBuffer.h  main.cpp
win/win_ffmpeg_yuv_pcm/Debug/: 9_20_ffmpeg.exp  9_20_ffmpeg.ilk  9_20_ffmpeg.lib
(+17 files in other folders)
